crates/solite-cli/src/commands/tui/snapshots/solite__commands__tui__test_tui__tests__move to last column.snap
---
source: crates/solite-cli/src/commands/tui/test_tui.rs
expression: self.terminal.backend()
snapshot_kind: text
---
"t2 (2 rows)                          Solite                       ? help  q quit"
"c6              c7              c8               c9              c10            "
"              6               7                8               9              10"
"f               g               h                i               j              "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"────────────────────────────────────────────────────────────────────────────────"
"        h/j/k/l navigate  [ sort asc  ] sort desc  │    y/c copy  q back        "
