crates/solite-cli/src/commands/tui/snapshots/solite__commands__tui__test_tui__tests__row page wrapped to last.snap
---
source: crates/solite-cli/src/commands/tui/test_tui.rs
expression: self.terminal.backend()
---
"people > row 1                       Solite                       ? help  q quit"
"                                   people id=1                                  "
"                                                                                "
"────────────────────────────────────────────────────────────────────────────────"
"  id                   PK  1                                                    "
"  name                  alice                                                   "
"› score                 90.5                                                    "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"────────────────────────────────────────────────────────────────────────────────"
"      j/k navigate  y/Enter copy value  p copy PK  J copy JSON  │    q back     "
