crates/solite-cli/src/commands/tui/snapshots/solite__commands__tui__test_tui__tests__shifted left 4.snap
---
source: crates/solite-cli/src/commands/tui/test_tui.rs
expression: self.terminal.backend()
snapshot_kind: text
---
"t2 (2 rows)                          Solite                       ? help  q quit"
"c5              c6              c7               c8              c9             "
"              5               6                7               8               9"
"e               f               g                h               i              "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"────────────────────────────────────────────────────────────────────────────────"
"        h/j/k/l navigate  [ sort asc  ] sort desc  │    y/c copy  q back        "
